--- a/app/views/application/_navbar.erb
+++ b/app/views/application/_navbar.erb
@@ -13,7 +13,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav">
-        <li<% if (params[:controller] == "panel") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.home"), root_path() %></li>
+        <li<% if (params[:controller] == "panel" && params[:action] == "index") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.home"), root_path() %></li>
         <li<% if (params[:controller] == "services") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.services"), services_path() %></li>
         <li<% if (params[:controller] == "hosts") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.hosts"), hosts_path() %></li>
         <li<% if (params[:controller] == "alerts") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.alerts"), alerts_path() %></li>
@@ -26,6 +26,10 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= image_tag current_user.avatar_url(25), :alt => current_user.name, :title => current_user.name, :class => "with-border" %><%= current_user.name %> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to "<i class='fa fa-cog'></i>&nbsp;&nbsp;".html_safe+t("ui.navbar.user.preferences"), user_preferences_path() %></li>
+            <% if (current_user.is_administrator?) %>
+            <li class="divider"></li>
+            <li><%= link_to "<i class='fa fa-cubes'></i>&nbsp;&nbsp;".html_safe+t("ui.navbar.user.sidekiq"), sidekiq_panel_path() %></li>
+            <% end %>
             <li class="divider"></li>
             <li><%= link_to "<i class='fa fa-sign-out'></i>&nbsp;&nbsp;".html_safe+t("ui.navbar.user.log_out"), destroy_user_session_path(), :method => :delete %></li>
           </ul>
