Added functional test for results views
ADD: Functional tests for results views
Added functions to test results (from Host and Service controllers),
host_results, results_data, host_results_data and their different
variants (like the javascript to update tables or the JSON with
data)

MODIFY: Error thrown by JSON API
results_data and host_results_data from ServicesController, now returns
error information in JSON and using the HTTP response code in
order to make a full-compatible API.

--- a/app/views/services/panels/_host_history.html.erb
+++ b/app/views/services/panels/_host_history.html.erb
@@ -12,7 +12,7 @@
       <% if (!@hresults[0].blank?) %>
         <%= status_badge(@hresults[0]) %>
       <% else %>
-        <%= service_status_badge(nil) %>
+        <%= status_badge(nil) %>
       <% end %>
     </div>
   </div>
