--- a/app/views/services/host_results.html.erb
+++ b/app/views/services/host_results.html.erb
@@ -56,7 +56,7 @@
         title: "<%= t('services.host_results.chart.title', :service => @service.name, :host => @host.name) %>",
         subtitle: "<%= t('services.host_results.chart.subtitle', :interval => @service.interval) %>",
         x_axis: "<%= t('services.host_results.chart.x_axis') %>",
-        y_axis: "<%= t('services.host_results.chart.x_axis') %> [<%= @service.get_units_short %>]",
+        y_axis: "<%= t('services.host_results.chart.y_axis') %> [<%= @service.get_units_short %>]",
         legend: "<%= t('services.host_results.chart.legend', :service => @service.name) %>"
       },
       data_url: "<%= host_results_data_service_path(:id => @service.id, :host_id => @host.id) %>"
