--- a/app/views/hosts/results.html.erb
+++ b/app/views/hosts/results.html.erb
@@ -60,7 +60,8 @@
         y_axis: "<%= t('services.resumes.'+ serv.resume.to_s) %> [<%= serv.get_units_short %>]",
         legend: "<%= t('hosts.results.chart.legend', :service => serv.name) %>"
       },
-      data_url: "<%= host_results_data_service_path(:id => serv.id, :host_id => @host.id) %>"
+      data_url: "<%= host_results_data_service_path(:id => serv.id, :host_id => @host.id) %>",
+      resume: "<%= serv.resume %>"
     });
     <% end %>
   });
