--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -70,6 +70,12 @@
         </div>
       </div>
       <div class="form-group">
+        <label for="host_services" class="col-sm-3 control-label"><%= t("hosts.form.alerts") %></label>
+        <div class="col-md-7 col-sm-9">
+          <p class="form-control-static"><%= @host.alerts.to_a.map{|s| s = s.name}.join(", ") %></p>
+        </div>
+      </div>
+      <div class="form-group">
         <div class="col-sm-offset-3 col-md-7 col-sm-9">
           <hr class='divider' />
         </div>
