--- a/app/views/alerts/_sidebar.html.erb
+++ b/app/views/alerts/_sidebar.html.erb
@@ -1,7 +1,11 @@
 <div class="panel panel-default">
   <div class="panel-body">
     <ul class="nav nav-pills nav-stacked">
-      <li<% if (action_name == "index") %> class="active"<% end %>><%= link_to t("alerts.sidebar.all"), alerts_path() %></li>
+      <li<% if ((@active == nil) && (action_name == "index")) %> class="active"<% end %>><%= link_to t("alerts.sidebar.all"), alerts_path() %></li>
+      <hr class='divider' />
+      <li class='disabled'><a><%= t("hosts.sidebar.view_by_status")%></a></li>
+      <li<% if ((@active == true) && (action_name == "index")) %> class="active"<% end %>><%= link_to t("alerts.sidebar.active"), alerts_path(:active => true) %></li>
+      <li<% if ((@active == false) && (action_name == "index")) %> class="active"<% end %>><%= link_to t("alerts.sidebar.inactive"), alerts_path(:active => false) %></li>
     </ul>
   </div>
 </div>
