--- a/app/views/alerts/edit.html.erb
+++ b/app/views/alerts/edit.html.erb
@@ -30,5 +30,7 @@ $(document).ready(function() {
     $("#alert_service_id").on("change", function() {
       getServiceHosts(this.value);
     });
+
+    getServiceHosts($("#alert_service_id").val());
 });
 </script>
