--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -41,6 +41,11 @@
           <% end %>
         </div>
       </div>
+      <div class="form-group">
+        <div class="col-sm-offset-3 col-md-7 col-sm-9">
+          <hr class='divider' />
+        </div>
+      </div>
       <% if (!@alert.service.blank?) %>
       <div class="form-group">
         <label for="alert_service" class="col-sm-3 control-label"><%= t("alerts.form.service") %></label>
@@ -52,10 +57,30 @@
       <div class="form-group has-error">
         <label for="alert_service" class="col-sm-3 control-label"><%= t("alerts.form.service") %></label>
         <div class="col-md-7 col-sm-9">
-          <p class="form-control-static text-danger"><%= t("services.form.service_not_assigned") %></p>
+          <p class="form-control-static text-danger"><%= t("alerts.form.service_not_assigned") %></p>
         </div>
       </div>
       <% end %>
+      <% if (!@alert.host_ids.blank?) %>
+      <div class="form-group">
+        <label for="alert_hosts" class="col-sm-3 control-label"><%= t("alerts.form.hosts") %></label>
+        <div class="col-md-7 col-sm-9">
+          <p class="form-control-static"><%= Host.where(:_id.in => @alert.host_ids).map{|h| h = h.name}.join(", ") %></p>
+        </div>
+      </div>
+      <% else %>
+      <div class="form-group has-error">
+        <label for="alert_hosts" class="col-sm-3 control-label"><%= t("alerts.form.hosts") %></label>
+        <div class="col-md-7 col-sm-9">
+          <p class="form-control-static text-danger"><%= t("alerts.form.hosts_not_assigned") %></p>
+        </div>
+      </div>
+      <% end %>
+      <div class="form-group">
+        <div class="col-sm-offset-3 col-md-7 col-sm-9">
+          <hr class='divider' />
+        </div>
+      </div>
       <div class="form-group">
         <label for="alert_condition" class="col-sm-3 control-label"><%= t("alerts.form.condition") %></label>
         <div class="col-md-7 col-sm-9">
@@ -69,14 +94,19 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-sm-offset-3 col-md-7 col-sm-9">
-          <hr class='divider' />
+        <label for="alert_condition_target" class="col-sm-3 control-label"><%= t("alerts.form.condition_target") %></label>
+        <div class="col-md-7 col-sm-9">
+          <p class="form-control-static"><%= t("alerts.condition_targets.condition_target_#{@alert.condition_target.to_s}") %></p>
         </div>
       </div>
       <div class="form-group">
-        <label for="alert_target" class="col-sm-3 control-label"><%= t("alerts.form.target") %></label>
+        <label for="alert_error_control" class="col-sm-3 control-label"><%= t("alerts.form.error_control") %></label>
         <div class="col-md-7 col-sm-9">
-          <p class="form-control-static"><%= t("alerts.targets.target_#{@alert.target.to_s}") %></p>
+          <% if (@alert.error_control) %>
+          <p class="form-control-static text-success"><%= t("alerts.form.active") %></p>
+          <% else %>
+          <p class="form-control-static text-danger"><%= t("alerts.form.inactive") %></p>
+          <% end %>
         </div>
       </div>
       <div class="form-group">
