--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -48,9 +48,9 @@
     <table class="table table-hover table-elements">
       <thead>
         <tr>
-          <th class='col-xs-3'><%= t("alerts.table.name") %></th>
-          <th class='col-xs-3'><%= t("alerts.table.service") %></th>
-          <th class='col-xs-6'></th>
+          <th class='col-xs-3 col-md-3'><%= t("alerts.index.table.name") %></th>
+          <th class='col-xs-3 col-md-2'><%= t("alerts.index.table.service") %></th>
+          <th class='col-xs-6 col-md-7'></th>
         </tr>
       </thead>
       <tbody>
