--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -91,13 +91,13 @@
       <div class="form-group">
         <label for="user_created_at" class="col-sm-3 control-label"><%= t("users.form.created_at") %></label>
         <div class="col-md-7 col-sm-9">
-          <p class="form-control-static"><%= @user.created_at.strftime("%m/%d/%Y - %H:%M") %></p>
+          <p class="form-control-static"><%= @user.created_at.strftime("%d/%m/%Y - %H:%M") %></p>
         </div>
       </div>
       <div class="form-group">
         <label for="user_updated_at" class="col-sm-3 control-label"><%= t("users.form.updated_at") %></label>
         <div class="col-md-7 col-sm-9">
-          <p class="form-control-static"><%= @user.updated_at.strftime("%m/%d/%Y - %H:%M") %></p>
+          <p class="form-control-static"><%= @user.updated_at.strftime("%d/%m/%Y - %H:%M") %></p>
         </div>
       </div>
       <div class="form-group">
