--- a/app/views/alerts/_sidebar.html.erb
+++ b/app/views/alerts/_sidebar.html.erb
@@ -2,10 +2,10 @@
   <div class="panel-body">
     <ul class="nav nav-pills nav-stacked">
       <li<% if ((@active == nil) && (action_name == "index")) %> class="active"<% end %>><%= link_to t("alerts.sidebar.all"), alerts_path() %></li>
-      <li<% if ((@active == nil) && (action_name == "alert_records_index")) %> class="active"<% end %>><%= link_to t("alerts.sidebar.records"), alert_records_path('all') %></li>
+      <li<% if ((@active == nil) && (action_name == "index_records")) %> class="active"<% end %>><%= link_to t("alerts.sidebar.records"), alert_records_path('all') %></li>
+      <% if (action_name == "index") %>
       <hr class='divider' />
       <li class='disabled'><a><%= t("hosts.sidebar.view_by_status")%></a></li>
-      <% if (action_name == "index") %>
       <li<% if (@active == true) %> class="active"<% end %>><%= link_to t("alerts.sidebar.alerts_status.active"), alerts_path(:active => true) %></li>
       <li<% if (@active == false) %> class="active"<% end %>><%= link_to t("alerts.sidebar.alerts_status.inactive"), alerts_path(:active => false) %></li>
       <% end %>
